updated conf file

--- a/macbak.cnf
+++ b/macbak.cnf
@@ -4,7 +4,8 @@
 BACKUP_SERVER: 10.0.0.15
 
 # Backup path on the server. Note this directory needs to
-# be on the server.
+# be on the server. If you use sync as BACKUP_TYPE, you can
+# ignore this setting.
 BACKUP_PATH: /home/wernerg/backups/macbookpro
 
 # Specifies the backup type to be used. Be VERY carefull with
