fixed sync bug that cropped up during backup restore

--- a/macbak.cnf
+++ b/macbak.cnf
@@ -21,7 +21,7 @@ BACKUP_PATH: /home/wernerg/backups/macbookpro
 #  your mac in sync with the another mac, that syncs of the same
 #  backup server. However if you loose data and MacBak runs after it, your
 #  data will be gone on the backup server as well.
-BACKUP_TYPE: backup 
+BACKUP_TYPE: sync 
 
 # Username for access to $BACKUP_SERVER
 USERNAME: wernerg
