moved alertMessage to AlertMessage class in lib

--- a/macbak.cnf
+++ b/macbak.cnf
@@ -52,7 +52,9 @@ ALERT: growl
 # List of local directories that you want to backup.
 # Add a entry like the example one.
 BACKUP_LIST:
-- /Users/wernergillmer/Documents
-- /Users/wernergillmer/Code
-- /Users/wernergillmer/Pictures
+- /tmp/macbak
+- /tmp/macbak2
+#- /Users/wernergillmer/Documents
+#- /Users/wernergillmer/Code
+#- /Users/wernergillmer/Pictures
 
