last commit for the day

--- a/macbak.cnf
+++ b/macbak.cnf
@@ -55,4 +55,5 @@ BACKUP_LIST:
 - /Users/wernergillmer/Documents
 - /Users/wernergillmer/Code
 - /Users/wernergillmer/Pictures
-
+- /Users/wernergillmer/Downloads/_Installs
+- /testDir
